# mpas-jedi

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build_jedi_mpas.csh  build_mpas.csh  mpas-jedi-import.cmake.in  template2model.py
.github/: pull_request_template.md
CI/: CMakeLists.txt  buildspec_clang.yml  buildspec_gnu.yml  buildspec_intel.yml
CI/cmake/: CTestConfig.cmake
cmake/: compiler_flags_Clang_CXX.cmake  compiler_flags_Cray_CXX.cmake  compiler_flags_Cray_Fortran.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_CXX.cmake  compiler_flags_Intel_Fortran.cmake  compiler_flags_XL_Fortran.cmake  mpasjedi_compiler_flags.cmake
docs/: CMakeLists.txt  Doxyfile.in  mainpage.h
graphics/: Analyses.py  AnalyzeStats.py  AnalyzeStatsArgs.py  DiagnoseModelStatistics.py  DiagnoseModelStatisticsArgs.py  DiagnoseObsStatistics.py  DiagnoseObsStatisticsArgs.py  GenerateABEIFactors.py  GenerateABEIFactorsArgs.py  Interpolate.py  JediDB.py  JediDBArgs.py  JobScript.py  PlotModelSpread.py  PlotModelSpreadArgs.py  ProcessArgs.py  SpawnAnalyzeStats.py  SpawnAnalyzeStatsArgs.py  StatisticsDatabase.py  analyze_config.py  basic_plot_functions.py  binning_params.py  binning_utils.py  bootstrap_demo.py  config.py  diag_utils.py  fit2D.py  jediApplicationArgs.py  modelsp_utils.py  plot_cost_grad.py  plot_diag.py  plot_diag_omaomb.py  plot_inc.py  plot_inc_CellorEdge_level.py  plot_modelspace_aggr.py  plot_modelspace_ci.py  plot_modelspace_ts_1d.py  plot_modelspace_ts_2d.py  plot_obs_loc.py  plot_obs_nc_loc.py  (+10 more)
mains/: CMakeLists.txt  mpas4DVar.cc  mpasDFI.cc  mpasDirac.cc  mpasEDA.cc  mpasEnsHofX.cc  mpasEstimateParams.cc  mpasForecast.cc  mpasGenEnsPertB.cc  mpasHofX.cc  mpasHofX3D.cc  mpasHofXNoModel.cc  mpasMakeObs.cc  mpasStaticBInit.cc  mpasVariational.cc
model/: CMakeLists.txt  ErrorCovariance.h  Fields.cc  (+89 more)
src/: CMakeLists.txt
src/mains/: CMakeLists.txt  mpasConvertState.cc  mpasConvertToStructuredGrid.cc  mpasDFI.cc  mpasDirac.cc  mpasEDA.cc  mpasEnKF.cc  mpasEnsHofX.cc  mpasEnsMeanVariance.cc  mpasErrorCovarianceToolbox.cc  mpasErrorCovarianceTraining.cc  mpasEstimateParams.cc  mpasForecast.cc  mpasGenEnsPertB.cc  mpasHofX.cc  mpasHofX3D.cc  mpasHofXNoModel.cc  mpasLETKF.cc  mpasProcessPerts.cc  mpasRTPP.cc  mpasSACA.cc  mpasStaticBInit.cc  mpasVariational.cc
src/mpasjedi/: CMakeLists.txt  ErrorCovarianceMPAS.cc  ErrorCovarianceMPAS.h  Fortran.h  GeometryMPAS.cc  GeometryMPAS.h  GeometryMPASParameters.h  IncrementMPAS.cc  IncrementMPAS.h  IncrementMPASFortran.h  IncrementMPASParameters.h  LinVarChaC2AMPAS.cc  LinVarChaC2AMPAS.h  LocalizationMatrixMPAS.cc  LocalizationMatrixMPAS.h  MPASTraits.h  ModelBiasCovarianceMPAS.h  ModelBiasIncrementMPAS.h  ModelBiasMPAS.h  ModelMPAS.cc  ModelMPAS.h  ModelMPASParameters.h  RunMPAS.cc  RunMPAS.h  StateMPAS.cc  StateMPAS.h  StateMPASFortran.h  StateMPASParameters.h  TlmIdMPAS.cc  TlmIdMPAS.h  TlmMPAS.cc  TlmMPAS.h  TlmMPASParameters.h  Traits.h  VarChangeMPAS.cc  VarChangeMPAS.h  instantiateLocalizationFactory.h  instantiateMPASVarChangeFactory.h  mpas2ufo_vars_mod.F90  mpas4da_mod.F90  (+19 more)
src/mpasjedi/Covariance/: ErrorCovariance.cc  ErrorCovariance.h  ErrorCovariance.interface.h  mpas_covariance_mod.F90
src/mpasjedi/Fields/: mpas_fields_mod.F90
src/mpasjedi/Geometry/: Geometry.cc  Geometry.h  Geometry.interface.h  GeometryParameters.h  mpas_geom_interface.F90  mpas_geom_mod.F90
src/mpasjedi/GeometryIterator/: GeometryIterator.cc  GeometryIterator.h  GeometryIterator.interface.h  iter.F90  iter2d.F90  iter3d.F90  mpas_geom_iter_interface.F90  mpas_geom_iter_mod.F90
src/mpasjedi/Increment/: Increment.cc  Increment.h  Increment.interface.h  IncrementParameters.h  mpas_increment_interface_mod.F90  mpas_increment_mod.F90
src/mpasjedi/LinearVariableChange/: LinearVariableChange.cc  LinearVariableChange.h
src/mpasjedi/LinearVariableChange/Base/: LinearVariableChangeBase.cc  LinearVariableChangeBase.h
src/mpasjedi/LinearVariableChange/Control2Analysis/: LinVarChaC2A.cc  LinVarChaC2A.h  LinVarChaC2A.interface.h  mpasjedi_linvarcha_c2a_mod.F90
src/mpasjedi/LinearVariableChange/Model2GeoVars/: LinVarChaModel2GeoVars.cc  LinVarChaModel2GeoVars.h  LinVarChaModel2GeoVars.interface.h  mpasjedi_lvc_model2geovars_interface.F90  mpasjedi_lvc_model2geovars_mod.F90
src/mpasjedi/Model/: Model.cc  Model.h  Model.interface.h  ModelParameters.h  mpas_model_mod.F90
src/mpasjedi/ModelBias/: ModelBias.h  ModelBiasCovariance.h  ModelBiasIncrement.h
src/mpasjedi/ModelData/: ModelData.h
src/mpasjedi/Saca/: module_mp_thompson_cldfra3.F90  mpas_saca_interface_mod.F90
src/mpasjedi/State/: State.cc  State.h  State.interface.h  StateParameters.h  mpas_state_interface_mod.F90  mpas_state_mod.F90
src/mpasjedi/Tlm/: Tlm.cc  Tlm.h  TlmParameters.h
src/mpasjedi/Utilities/: mpas2ufo_vars_mod.F90  mpas4da_mod.F90  mpas_saca_interface_mod.F90  mpasjedi_unstructured_interp_mod.F90  slow_oops_unstructured_interpolation_mod.F90
src/mpasjedi/VariableChange/: VariableChange.cc  VariableChange.h
src/mpasjedi/VariableChange/Base/: VariableChangeBase.cc  VariableChangeBase.h
src/mpasjedi/VariableChange/Model2GeoVars/: VarChaModel2GeoVars.cc  VarChaModel2GeoVars.h  VarChaModel2GeoVars.interface.h  mpasjedi_vc_model2geovars_interface.F90  mpasjedi_vc_model2geovars_mod.F90
src/mpasjedi/VariableChanges/Control2Analysis/: LinVarChaC2A.cc  LinVarChaC2A.h  LinVarChaC2A.interface.h  mpasjedi_linvarcha_c2a_interface.F90  mpasjedi_linvarcha_c2a_mod.F90
src/mpasjedi/VariableChanges/Model2GeoVars/: LinVarChaModel2GeoVars.cc  LinVarChaModel2GeoVars.h  LinVarChaModel2GeoVars.interface.h  VarChaModel2GeoVars.cc  VarChaModel2GeoVars.h  VarChaModel2GeoVars.interface.h  mpasjedi_vc_model2geovars_interface.F90  mpasjedi_vc_model2geovars_mod.F90
src/mpasjedi/getvalues/: GetValues.cc  GetValues.h  GetValues.interface.F90  GetValues.interface.h  LinearGetValues.cc  LinearGetValues.h  LinearGetValues.interface.F90  LinearGetValues.interface.h  mpasjedi_getvalues_mod.F90  mpasjedi_lineargetvalues_mod.F90  mpasjedi_unstructured_interp_mod.F90
(+488 files in other folders)
